--- a/f2.html
+++ b/f2.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is feature 2</h1>
     <p>lorem ipsum dolor sit amet</p>
+    <h1>Added this after the review rules</h1>
 </body>
 </html>
